2004-01-03  MINAMI Hirokazu  <minami@mistfall.net>

	* xwindow/x_main.config.c: type_engine was not initialized when
	no option had been specified. fixed.

	* xwindow/x_font_cache.c: "font_name_list" should not accessed
	after realloc.

2003-12-30  Araki Ken  <arakiken@users.sf.net>

	* Core X Font Subsystem can be removed by --with-type-engines=xft.

2003-12-28  MINAMI Hirokazu  <minami@mistfall.net>

	* xwindow/x_screen.c: reverted the last change.

2003-12-28  MINAMI Hirokazu  <minami@mistfall.net>

	* configure.in, configure: changed VERSION from 2.7.0->2.8.0
	* xwindow/x_screen.c: fixed segv (use_anti_alias should do nothing
	 when USE_TYPE_XFT is not defined).

2003-12-27  Seiichi SATO  <ssato@sh.rim.or.jp>

	* tool/mlconfig/main.c: ANTI_ALIAS -> USE_TYPE_XFT

2003-12-27  Seiichi SATO  <ssato@sh.rim.or.jp>

	* If confiugre detects that pkg-config and xft2 library are available,
	  USE_TYPE_XFT will be defined.

2003-12-27  Araki Ken  <arakiken@users.sf.net>

	* Added --type-engines option to configure and obsoleted --anti-alias option.
	* Added -*,--type,type_engine option to mlterm.
	  You can specify which engine you use, xcore or xft.

2003-12-27  Seiichi SATO  <ssato@sh.rim.or.jp>

	* mlterm/ml_pty_win32.c: cleaned up error handling.
	* updated config.sub and config.guess. (timestamp='2003-10-07')

2003-12-25  MINAMI Hirokazu  <minami@mistfall.net>

	* tools/mlconfig/main.c: made gettext work with GTK2.

	* Re-mapping of keys using xmodmap now should be handled properly.
	* Keys that can be locked(Num_Lock/Scroll_Lock/ISO-Level3_Lock)
	 are no longer regarded as a valid modifier key.

2003-12-24  Seiichi SATO  <ssato@sh.rim.or.jp>

	* contrib/scrollbar/pixmap_engine/pixmap_engine.c: fixed a problem when
	  slider images were not presented.

2003-12-22  MINAMI Hirokazu  <minami@mistfall.net>

	* x_window.c: selection conversion request type "TARGETS"
	 is now supported( clipboard now should work with KDE klipper).
