@@ -3,8 +3,10 @@
 	* xwindow/x_main.config.c: type_engine was not initialized when
 	no option had been specified. fixed.
 
-	* xwindow/x_font_cache.c: "font_name_list" should not accessed
+	* xwindow/x_font_cache.c: "font_name_list" should not be accessed
 	after realloc.
+
+	* xwindow/x_window.c: #ifdef'ed not-yet-implemented features.
 
 2003-12-30  Araki Ken  <arakiken@users.sf.net>
 
